--- a/Mreg4.Rmd
+++ b/Mreg4.Rmd
@@ -1,7 +1,9 @@
 ---
-title: "Wie schätzt man eine Mehrebenenregression in R?"
+title: "4 Wie schätzt man eine Mehrebenenregression in R?"
 subtitle: "Videoserie Mehrebenenregression Teil 4/6"
-author: "Dr. Uwe Remer"
+author:
+  - name: Dr. Uwe Remer
+    email: uwe.remer@sowi.uni-stuttgart.de
 date: "Juli 2022"
 output:
   html_document:
@@ -40,7 +42,7 @@ save_fig <- function(filename, save = TRUE){
 }
 ```
 
-```{css, eval=F, echo=F}
+```{css, eval=T, echo=F}
 /* CSS Stil für Formeln unter Scatterplots */
 P.math {
     text-align: center;
@@ -67,7 +69,7 @@ DIV.border {
 
 Hallo und herzlich Willkommen zum vierten Teil der Videoserie zum Thema Mehrebenenregression in R. 
 
-In den vorigen Videos haben wir gesehen, wie man mit Hilfe des sogenannten Nullmodells berechnet, ob eine Mehrebenenregression überhaupt notwendig ist und wie man die Daten für die Mehrebenenregression vorbereitet.
+Im vorigen [Video 2](Mreg2.html) haben wir gesehen, wie man mit Hilfe des sogenannten Nullmodells berechnet, ob eine Mehrebenenregression überhaupt notwendig ist. Und in [Video 3](Mreg3.html), wie man die Daten für die Mehrebenenregression vorbereitet.
 
 In diesem vierten Video geht es nun darum: Wie schätzt man eine Mehrebenenregression in R? 
 
@@ -79,7 +81,7 @@ Dazu schätzen wir zwei grundlegende Modelle:
 - Ein Modell mit variierenden Intercepts mit Prädiktoren auf L1
 - Ein Modell mit variierenden Intercepts mit Prädiktoren auf L1 und L2
 
-In Video 5 erweitern wir dann diese Modelle um variierenden Slopes und Cross-Level-Interaktionen.
+In [Video 5](Mreg5.html) erweitern wir dann diese Modelle um variierenden Slopes und Cross-Level-Interaktionen.
 
 
 Lernziele für dieses Video sind…
@@ -151,7 +153,7 @@ Alle Variablen haben einen signifikanten Einfluss, wie wir an der letzten Spalte
 
 Mit Zunahme von Bildung um einen Skalenpunkt, sinkt das politische Vertrauen um $`r round(fixef(mreg1)[2], 3)`$. 
 
-Eine vorläufige Antwort auf unsere Forschungsfrage lautet also: Bildung beeinflusst das negativ.
+Eine vorläufige Antwort auf unsere Forschungsfrage lautet also: Bildung beeinflusst das politische Vertrauen negativ.
 
 Die anderen Determinanten haben einen positiven Effekt auf politisches Vertrauen. Da die wahrgenommene politische Responsivität eine andere Skalenbreite aufweist, können wir die Effektstärken jedoch nicht direkt miteinander vergleichen. 
 
@@ -259,7 +261,7 @@ So simpel und klar die Berechnung und Interpretation dieser $R^2$ Maße für die
 
 [Nakagawa/Schielzeth 2012](https://doi.org/10.1111/j.2041-210x.2012.00261.x) haben noch weitere Nachteile angeführt und schlagen eine Alternative Berechnung für ein $R^2$ für Mehrebenenregressionen vor.
 
-Wir können $Nakagawa~R^2$ mit Hilfe des `performance`-Paketes und der Funktion `r2()` berechnen:
+Wir können $Nakagawa~R^2$ mit Hilfe des [`performance`](https://cran.r-project.org/web/packages/performance/index.html)-Paketes und der Funktion `r2()` berechnen:
 
 ```{r}
 library(performance)
@@ -271,53 +273,29 @@ Das marginale $R^2$ können wir dabei ignorieren, da es die Varianzen der Random
 Unser Modell erklärt also etwa `r round(r2(mreg1)$R2_conditional*100, 1)` Prozent der Varianz in den Daten. 
 
 
-Darüber hinaus bietet das `performance`-Paket die Möglichkeit mit der Funktion `model_performance()` bei Bedarf weitere Goodness of Fit Maße zu berechnen:
+Darüber hinaus bietet das [`performance`](https://cran.r-project.org/web/packages/performance/index.html)-Paket die Möglichkeit mit der Funktion `model_performance()` bei Bedarf weitere Goodness of Fit Maße zu berechnen:
 
 ```{r}
 model_performance(mreg0)
 ```
 
 
-
+Kommen wir nun zum nächsten Schritt.
 
 # Variierende Intercepts mit Prädiktoren auf L1 und L2
 
-Ergänzen wir das Modell nun noch um Prädiktoren auf Ebene 2. 
+Wir ergänzen das Modell nun um unseren Prädiktor auf Ebene 2. 
 
-Als erste unabhängige Variable auf Ebene 2 nehmen wir das durchschnittliche Bildungsniveau der Länder mit in das Modell auf.
+Als zweite Forschungsfrage wollen wir wissen, ob das Ausmaß an Korruption in einem Land den Effekt von Bildung beeinflussen kann.
 
-Dazu berechnen wir aus den Individualdaten den Mittelwert der Variable Bildung je Land mit Hilfe der `aggregate()`-Funktion. 
+Wir nehmen also den *Corruption Perception Index* (CPI) von Transparency International mit ins Model. Der CPI ist eine Skala von 0 'sehr korrupt' bis 100 'sehr sauber'. 
 
-
-```{r}
-bildung_agg <- aggregate(list(bildung_agg = ess$bildung), 
-                         by=list(cntry=ess$cntry), 
-                         FUN=mean, na.rm=T)
-```
-Dann spielen diese Variable mit der `merge()`-Funktion in den Datensatz ein.
-
-```{r}
-ess <- merge(ess, bildung_agg,
-             by="cntry",
-             all.x = T)
-```
-
-Da wir die Bildungsvariable am Grand Mean zentriert hatten, erhalten wir als Ergebnis die Abweichung eines Landes vom Bildungsmittelwert der 25 Länder.
-
-```{r}
-library(ggplot2)
-ggplot(ess, aes(x=cntry, y=bildung_agg)) +
-  geom_bar(stat="identity") +
-  scale_y_continuous(limits=c(-1,1)) +
-  theme(axis.text=element_text(size=6))
-```
+Nochmal zur Erinnerung, es ist ein Expertenrating, daher wird der Index *Corruption Perception Index* genannt. 100 steht nicht für keine objektive Korruption, sondern Transparency International nennt es dann 'sehr sauber'.
 
 
-Da wir als weitere Forschungsfrage wissen wollen, ob das Ausmaß an Korruption in einem Land den Effekt von Bildung beeinflussen kann, müssen wir die Variable für Korruption auf Ebene 2 ergänzen.
+Damit wir die Effekte später intuitiver Interpretieren können, drehen wir die Variable CPI, famit höhere Werte, höhere Korruption bedeuten.
 
-Wir nehmen also den *Corruption Perception Index* (CPI) von Transparency International mit ins Model. Der CPI ist eine Skala von 0 'sehr korrupt' bis 100 'sehr sauber'. Damit wir die Effekte später intuitiver Interpretieren können, drehen wir die Variable. Je höher der Wert, desto mehr Korruption.
-
-Die original Variable heißt `c_ticpi_2018`.
+Die original Variable heißt `c_ticpi_2018`. Diese wird gedreht, dann schauen wir uns die Verteilung mit einer Grafik an.
 
 ```{r}
 ess$korruption <- abs(ess$c_ticpi_2018-100)
@@ -328,9 +306,9 @@ ggplot(ess, aes(x=cntry, y=korruption)) +
   theme(axis.text=element_text(size=6))
 ```
 
-Da beide Variablen auf Ebene 2 liegen, können sie nur den länderspezifischen Mittelwert der abhängigen Variable beeinflussen. 
+Da die Variable auf Ebene 2 liegt, kann sie nur den länderspezifischen Mittelwert der abhängigen Variable beeinflussen. 
 
-Die länderspezifische Korruption und die länderspezifische durchschnittliche Bildung muss also Teil der Gleichung des variierenden Intercepts $\beta_{0j}$ sein. Wir ergänzen dafür die Koeffizienten $\gamma_{01j}$ und $\gamma_{02j}$ in der zweiten Zeile der Gleichung:
+Die länderspezifische Korruption  muss also Teil der Gleichung des variierenden Intercepts $\beta_{0j}$ sein. Wir ergänzen dafür die Koeffizienten <font color=red>$\gamma_{01j}$</font> in der zweiten Zeile der Gleichung:
 
 <div class=border>
 <p class=math_left> 
@@ -339,16 +317,16 @@ $y_{ij} = \beta_{0j} + \beta_{1}x_{1ij} + \beta_{2}x_{2ij} + \beta_{3}x_{3ij} + 
 mit 
 <p class=math_left> 
 $\beta_{0j} = \gamma_{00} +$
-<font color=red>$\gamma_{01j} + \gamma_{02j}$</font>
+<font color=red>$\gamma_{01j}$</font>
 $+ u_{0j}$
 </p>
 </div>
  
-$\gamma_{01j}$ ist also Regressionskoeffizient für den Einfluss der Variable `bildung_agg` auf den variierenden Intercept und $\gamma_{02j}$ der Einfluss der Variable `korruption`.
+<font color=red>$\gamma_{01j}$</font> ist also Regressionskoeffizient für den Einfluss der Variable `korruption` auf den variierenden Intercept.
 
-Durch die Aufnahme dieser unabhängigen Variablen auf Ebene 2 sollte zuvor unerklärte Varianz auf Ebene 2 geringer werden - also das Ebene 2 Residuum $u_{0j}$ geringer werden.
+Durch die Aufnahme dieser unabhängigen Variable auf Ebene 2 sollte zuvor unerklärte Varianz auf Ebene 2 geringer werden - also das Ebene 2 Residuum $u_{0j}$ geringer werden.
 
-Mal sehen, was empirisch rauskommt...
+Ob das so ist, sehen wir gleich.
 
 Im R Befehl für die Mehrebenenregression müssen wir nicht explizit angeben, dass es sich um eine Kontextvariable handelt. Wir ergänzen sie einfach in der Formel wie jede andere Variable auch.
 
@@ -356,7 +334,7 @@ Im R Befehl für die Mehrebenenregression müssen wir nicht explizit angeben, da
 library(lmerTest) 
 mreg2 <- lmer(pol_vertrauen ~ 1 + bildung + 
                 responsivitaet + zufr_wirtschaft + soz_vertrauen + 
-                korruption + bildung_agg +
+                korruption +
                 (1 | cntry),  
               data=ess)
 
@@ -366,8 +344,6 @@ summary(mreg2)
 Wie wir bei den Fixed Effects sehen können, hat also Korruption einen kleinen, aber signifikanten negativen Effekt auf den variierenden Intercept. Also mit Zunahme der Korruption um einen Skalenpunkt sinkt das durchschnittliche politische Vertrauen in einem Land um $`r fixef(mreg2)[6]`$
 
 Da der Korruptionsindex eine Skala von 0 bis 100 ist, ist das nicht wenig. Sehr korruptionsbelastete Länder haben einen Korruptionsindex von über 50. Am anderen Ende stehen Länder mit einem Wert von 15. Bei 35 Skalenpunkten Unterschied ergibt sich also für die abhängige Variable politisches Vertrauen einen Unterschied von $`r fixef(mreg2)[6]*35`$ Punkten.
-  
-Das Bildungsniveau eines Landes hat dagegen keinen signifikanten Einfluss auf das durchschnittliche politische Vertrauen in einem Land. Bildung hat also nur einen Effekt auf Individualebene.
   
 Und was sagt die Modellgüte?
 
@@ -381,14 +357,14 @@ Das konditionale $R^2$ erhöht sich minimal von `r round(r2(mreg1)$R2_conditiona
 # Schluss
 
 
-Damit sind wir am Ende des dritten Videos. 
+Damit sind wir am Ende des vierten Videos. 
 
 
 Wir haben gesehen, wie man ein einfaches Mehrebenenmodell als Formel notiert und das Modell mit der `lmer()`-Funktion in R umsetzt. 
 
 Dabei haben wir zuerst ein variierendes Intercept Modell mit Prädiktoren auf Ebene 1 geschätzt und habe Kompositionseffekte kennengelernt. Danach haben wir das Modell um eine unabhängige Variable auf Ebene 2 ergänzt und interpretiert.
 
-Im nächsten Video Nummer 5 werden wir dann das Varying Slope Modell und das Modell mit Cross-Level Interaktion anschauen uns klären, wie man herausfindet, welches Modell das passende ist.
+Im nächsten [Video 5](Mreg5.html) werden wir dann das Varying Slope Modell und das Modell mit Cross-Level Interaktion anschauen und klären, wie man herausfindet, welches Modell das passende ist.
 
 Am Ende dieses Videos gibt es noch eine Aufgabe und zum Schluss die Literatur.
 
@@ -416,6 +392,6 @@ Haben Sie alles mitgenommen? Fragen Sie sich selbst, ob Sie die folgenden Lernzi
 
 ```{r, echo=F, eval=F}
 library("knitr")
-knitr::purl("Mreg3.Rmd",
+knitr::purl("Mreg4.Rmd",
             documentation=0)
 ```
