--- a/Mreg5.Rmd
+++ b/Mreg5.Rmd
@@ -1,7 +1,9 @@
 ---
-title: "Wie schätzt man variierende Slopes und Cross-Level Interaktionen?"
+title: "5 Wie schätzt man variierende Slopes und Cross-Level Interaktionen?"
 subtitle: "Videoserie Mehrebenenregression Teil 5/6"
-author: "Dr. Uwe Remer"
+author:
+  - name: Dr. Uwe Remer
+    email: uwe.remer@sowi.uni-stuttgart.de
 date: "Juli 2022"
 output:
   html_document:
@@ -70,8 +72,7 @@ Die Fragestellung für dieses Video lautet: Wie schätzt man variierende Slopes 
 
 Und daran anschließend: Wie findet man das eigentlich das passende Modell für die Mehrebenenregression? Welche der Varianten ist am Ende die angemessene?
 
-
-Im vorigen Video 4 haben wir das einfache Varying Intercept Modell geschätzt. Wir haben Prädiktoren auf Ebene 1 und 2 berücksichtigt und die Fixed Effects und die Random Effects interpretiert.
+Im vorigen [Video 4](MReg4.html) haben wir das einfache Varying Intercept Modell geschätzt. Wir haben Prädiktoren auf Ebene 1 und 2 berücksichtigt und die Fixed Effects und die Random Effects interpretiert.
 
 In diesem Video wird es darum gehen, wie man das passende Modell aus den möglichen Varianten findet. 
 Dazu erweitern wir das Varying Intercept Modell zunächst um einen Varying Slope und danach um eine Cross Level Interaktion. 
@@ -100,9 +101,9 @@ Legen wir los... Unsere erste Forschungsfrage lautet ja:
 
 > Welchen Einfluss hat Bildung auf politisches Vertrauen?
 
-Im letzten Video haben das Grundmodell mit variierenden Intercepts geschätzt. Und eine vorläufige Antwort auf die Forschungsfrage war: Bildung hat auf Individualebene einen negativen Effekt auf politisches Vertrauen. Das Bildungsniveau eines Landes beeinflusst dessen Niveau an politischem Vertrauen jedoch nicht.
+Im letzten Video haben das Grundmodell mit variierenden Intercepts geschätzt. Und eine vorläufige Antwort auf die Forschungsfrage war: Bildung hat auf Individualebene einen negativen Effekt auf politisches Vertrauen. 
 
-Aber: Wir haben ja bereits gesehen, dass der datengenerierende Prozess Kontextabhängig ist. So könnte es auch sein, dass der Effekt der Variable `bildung` nicht in allen Ländern gleich wirkt!
+Aber: Wir haben ja bereits gesehen, dass der datengenerierende Prozess kontextabhängig ist. So könnte es auch sein, dass der Effekt der Variable `bildung` nicht in allen Ländern gleich wirkt!
 
 Es wäre ja denkbar, dass der negative Effekt in manchen Ländern stärker und in anderen schwächer ausfällt.
 
@@ -115,7 +116,7 @@ Die Idee ist, dass der Effekt eines Ebene 1 Prädiktors zwischen den Kontexteinh
 
 Was heißt das für unser Mehrebenenmodell?
 
-Dieses Modell war unser Varying Intercept Modell:
+Dieses Modell ist die Formel unseres Varying Intercept Modells:
 
 <div class=border>
 <p class=math_left> 
@@ -125,11 +126,11 @@ $x_{1ij} + \beta_{2}x_{2ij} + \beta_{3}x_{3ij} + \beta_{4}x_{4ij} + r_{ij}$
 </p>
 mit 
 <p class=math_left> 
-$\beta_{0j} = \gamma_{00} + \gamma_{01j} + \gamma_{02j} + u_{0j}$
+$\beta_{0j} = \gamma_{00} + \gamma_{01j} + u_{0j}$
 </p>
 </div>
 
-Wenn wir jetzt den Slope $\beta_{1}$ variieren lassen wollen, ergänzen wir zunächst einen Index $j$, also $\beta_{1j}$.
+Wenn wir jetzt den Slope <font color=blue>$\beta_{1}$</font> variieren lassen wollen, ergänzen wir zunächst einen Index <font color=red>$j$</font>, also <font color=blue>$\beta_{1}$</font><font color=red>$_{j}$</font>.
 
 Außerdem müssen wir eine Regressionsgleichung für diesen variierenden Slope ergänzen. 
 
@@ -141,7 +142,7 @@ $x_{1ij} + \beta_{2}x_{2ij} + \beta_{3}x_{3ij} + \beta_{4}x_{4ij} + r_{ij}$
 </p>
 mit 
 <p class=math_left> 
-$\beta_{0j} = \gamma_{00} + \gamma_{01j} + \gamma_{02j} + u_{0j}$
+$\beta_{0j} = \gamma_{00} + \gamma_{01j} + u_{0j}$
 </p>
 und jetzt zusätzlich
 <p class=math_left>
@@ -161,23 +162,50 @@ Das setzen wir nun auch in der `lmer()`-Formel in R um:
 In der Klammer haben wir bisher gesagt: "Lasse den Intercept `1` variieren nach `cntry`".
 
 Das ergänzen wir so, dass nun auch `bildung` nach `cntry` variieren darf.
-Das führen wir aus und rufen die `summary()` auf:
 
 ```{r}
 library(lmerTest) 
 mreg3 <- lmer(pol_vertrauen ~ 1 + bildung + 
                 responsivitaet + zufr_wirtschaft + soz_vertrauen + 
-                korruption + bildung_agg +
+                korruption +
                 (1 + bildung | cntry),  
               data=ess)
+```
 
+Leider passiert es immer wieder, dass Mehrebenenmodelle wenn sie komplexer werden, eine Fehlermeldung oder Warnung auswerfen weil das Modell nicht konvergiert sei.
+
+Das muss zunächst nichts Schlimmes bedeuten. Meist liegt es daran, dass das Modell eine fehlerhafte oder unsinnige Spezifikation enthält. 
+
+Ein anderer Grund kann sein, dass der der Algorithmus, der die passenden Modellparameter sucht - sagen wir es mal untechnisch - sich verläuft. 
+
+Dieser Optimizer-Algorithmus könnte dann, wenn wir ihm mehr Versuche geben, doch noch zum Ziel finden, oder wir wählen einen anderen Optimizer aus.
+
+Das sind aber wirklich fortgeschrittene Themen. Daher präsentiere ich hier nur eine Lösung und verweise auf eine [weiterführende Quelle](https://joshua-nugent.github.io/allFit/) zur Funktion allFit() und generell auf die ausgezeichnete Hilfe, die man auf [Stackoverflow.com](Stackoverflow.com) findet.
+
+Als simple Lösung in unserem Beispiel, wähle ich einen alternativen Optimizer. Dazu ergänze ich den `lmer()`-Aufruf um ein `control` Argument:
+
+```{r}
+mreg3 <- lmer(pol_vertrauen ~ 1 + bildung + 
+                responsivitaet + zufr_wirtschaft + soz_vertrauen + 
+                korruption +
+                (1 + bildung | cntry),  
+              data=ess,
+              control=lmerControl(optimizer="bobyqa"))
+```
+
+Jetzt konvergiert das Modell und wir rufen wir die Ergebnisse auf:
+
+```{r}
 summary(mreg3)
 ```
 
 
+```{r, include=F}
+vm3 <- as.data.frame(VarCorr(mreg3))
+```
 
 Wir sehen nun bei den Random Effects, dass eine neue Zeile hinzugekommen ist: der <font color=red>Random Effect für Bildung.</font>
-Dessen Beitrag an der Gesamtvarianz ist mit einer Varianz von <font color=red>$0.002$</font> aber recht gering. 
+Dessen Beitrag an der Gesamtvarianz ist mit einer Varianz von <font color=red>$`r vm3[2,4]`$</font> aber recht gering. 
 
 Bevor wir das Modell also inhaltlich interpretieren, müssen wir prüfen, ob dieser variierende Slope tatsächlich gerechtfertigt ist. Oder anders ausgedrückt: Ist die Annahme eines zwischen den Ländern variierenden Regressionskoeffizienten für Bildung überhaupt empirisch haltbar? 
 
@@ -263,9 +291,9 @@ Auch hier sehen wir, dass die log-Likelihood im zweiten Modell geringer ist - al
 
 ## Interpretation des Varying Slope Modells
 
-Der Fixed Effect für Bildung sagt uns nun wie groß der durchschnittliche Bildungseffekt $\gamma_{10}$ ist: $-0.034$. Dieser Effekt ist signifikant. Also haben wir über alle Länder hinweg einen leicht negativen Effekt für Bildung. 
+Der Fixed Effect für Bildung sagt uns nun wie groß der durchschnittliche Bildungseffekt $\gamma_{10}$ ist: $`r fixef(mreg3)[2]`$. Dieser Effekt ist signifikant. Also haben wir über alle Länder hinweg einen leicht negativen Effekt für Bildung. 
 
-Interessant ist nun aber, wie stark sich die Effekte zwischen den Länder unterscheiden. Denn: wir haben ja einen variierenden Effekt, dessen Varianz bei $0.002$ liegt!
+Interessant ist nun aber, wie stark sich die Effekte zwischen den Länder unterscheiden. Denn: wir haben ja einen variierenden Effekt, dessen Varianz bei $`r vm3[2,4]`$ liegt!
 
 Mit der Funktion `ranef()` können wir uns Ausgeben lassen, wie stark die Länder vom durchschnittliche Bildungseffekt, dem fixed Effect $\gamma_{10}$ abweichen:
 
@@ -273,10 +301,9 @@ Mit der Funktion `ranef()` können wir uns Ausgeben lassen, wie stark die Lände
 ranef(mreg3)
 ```
 
-Tatsächlich reichen diese Abweichungen von $-0.074$ bis $0.072$. 
+Tatsächlich reichen diese Abweichungen von $`r range(ranef(mreg3)$cntry[,2])[1]`$ bis $`r range(ranef(mreg3)$cntry[,2])[2]`$. 
 
-Um das anschaulicher zu machen, addieren wir den fixed Effect für Bildung:
-
+Um das anschaulicher zu machen, addieren wir den fixed Effect für Bildung.
 
 ```{r}
 re_bildung <- ranef(mreg3)$cntry[,2]
@@ -286,10 +313,7 @@ names(re_bildung) <- row.names(ranef(mreg3)$cntry)
 sort(re_bildung+fixef(mreg2)[2])
 ```
 
-Addiert man den fixed Effect für Bildung $\gamma_{10}$ zeigt sich, das der variierende Slope für Bildung $\beta_{1j}$ von $-0.1$ in Polen bis $0.05$ in Schweden reicht:
-
-
-
+Addiert man also zu den jeweiligen random Effects für Bildung je Land den fixed Effect für Bildung $\gamma_{10}$ zeigt sich, das der variierende Slope für Bildung $\beta_{1j}$ von $`r range(sort(re_bildung+fixef(mreg2)[2]))[1]`$ in Polen PL bis $`r range(sort(re_bildung+fixef(mreg2)[2]))[2]`$ in Schweden SE reicht.
 
 
 # Cross Level Interaktionen
@@ -304,12 +328,11 @@ Könnte es also sein, dass das Ausmaß an Korruption in einem Land diese Variati
 
 Der Effekt des Individualmerkmals Bildung ist ein Effekt auf Ebene 1 - auch wenn die Größe dieses Ebene 1 Effektes zwischen den Ländern variiert.
 
-Korruption messen wir dabei als Kontextmerkmal auf Ebene 2. Wir haben für jedes Land einen Wert für den Transparency International Korruptionsindex.
+Korruption messen wir dabei als Kontextmerkmal auf Ebene 2. Wir haben für jedes Land einen Wert für den Transparency International Corruption Perception Index.
 
-Wenn diese Ebene 2 Variable also einen Effekt auf Ebene 1 beeinflusst ist das ein sogenannter Cross-Level Interaktionseffekt. Interatkion deshalb, weil ein Effekt einen anderen Effekt beeinflusst, also mit ihm interagiert.
+Wenn diese Ebene 2 Variable also einen Effekt auf Ebene 1 beeinflusst ist das ein sogenannter **Cross-Level Interaktionseffekt**. Interaktion deshalb, weil ein Effekt einen anderen Effekt beeinflusst, also mit ihm interagiert.
 
-
-Das ergänzen wir nun in der Regressionsgleichung für diesen variierenden Slope ergänzen. 
+Wir ergänzen nun in der Regressionsgleichung diesen Ebene 2 Prädiktor für den variierenden Slope von Bildung: 
 
 <div class=border>
 <p class=math_left> 
@@ -317,7 +340,7 @@ $y_{ij} = \beta_{0j} + \beta_{1j}x_{1ij} + \beta_{2}x_{2ij} + \beta_{3}x_{3ij} +
 </p>
 mit 
 <p class=math_left> 
-$\beta_{0j} = \gamma_{00} + \gamma_{01j} + \gamma_{02j} + u_{0j}$
+$\beta_{0j} = \gamma_{00} + \gamma_{01j} + u_{0j}$
 </p>
 und jetzt zusätzlich
 <p class=math_left>
@@ -327,11 +350,11 @@ $+u_{1j}$
 </p>
 </div>
 
-<font color=red>$\gamma_{11j}$</font> ist dabei der Regressionskoeffizient der Variable "Korruptionsindex", also der Einfluss der Variable "Korruptionsindex" auf den variierende Slope der Variable Bildung $\beta_{1j}$.
+<font color=red>$\gamma_{11j}$</font> ist dabei der Regressionskoeffizient der Variable `korruption`, also der Einfluss der Variable `korruption` auf den variierende Slope der Variable Bildung $\beta_{1j}$.
 
 Wenn $\gamma_{11j}$ tatsächlich einen Erklärungsbeitrag für die Variation des random Effects der Variable Bildung hat, dann müsste auch die Residualvarianz $u_{1j}$ geringer werden.
 
-Schauen wir uns das im Modell an:
+Sehen wir uns das im Modell an:
 
 Wir schätzen also unser neues Modell, und für die Cross-Level Interaktion müssen wir nur einen ganz regulären Interaktionseffekt in der Formel spezifizieren. R weiß dann von ganz alleine, dass die eine Variable auf Ebene 1 ist und die andere Variable auf Ebene 2.
 
@@ -340,7 +363,7 @@ Wir schätzen das Modell und schauen dann mit der Anova, ob das Modell signifika
 ```{r cross_level_interaktion}
 mreg4 <- lmer(pol_vertrauen ~ 1 + bildung + 
                 responsivitaet + zufr_wirtschaft + soz_vertrauen + 
-                korruption + bildung_agg +
+                korruption +
                 bildung:korruption + 
                 (1 + bildung | cntry),  
               data=ess)
@@ -349,31 +372,33 @@ anova(mreg3, mreg4, refit=T)
 
 Wir sehen, das Modell ist signifikant besser. 
 
-Das konditionale $R^2$ liegt bei $0.467$.
 ```{r}
 performance::r2(mreg4)
 ```
 
-Schaen wir uns also die Ergebnisse an:
+Und das konditionale $R^2$ liegt bei $`r performance::r2(mreg4)$R2_conditional`$.
+
+
+Das das Modell tatsächlich besser zu den Daten passt, können wir auch die Ergebnisse interpretieren:
 
 ```{r}
 summary(mreg4)
 ```
 
 
-Wir sehen bei den fixed Effects nun einen signifikanten Interaktionseffekt von $`r fixef(mreg4)[8]`$.
-Das bedeutet, das mit Zunahme der Korruption um einen Skalenpunkt verändert sich der Effekt von Bildung um den Faktor $`r fixef(mreg4)[8]`$. Je höher die Korruption ist, desto negativer wird der Effekt von Bildung. Und umgekehrt: je weniger Korruption in einem Land herrscht, desto positiver wird der Effekt von Bildung auf politisches Vertrauen.
+Wir sehen bei den fixed Effects nun einen signifikanten Interaktionseffekt von $`r fixef(mreg4)[7]`$.
+Das bedeutet, das mit Zunahme der Korruption um einen Skalenpunkt verändert sich der Effekt von Bildung um den Faktor $`r fixef(mreg4)[7]`$. Je höher die Korruption ist, desto negativer wird der Effekt von Bildung. Und umgekehrt: je weniger Korruption in einem Land herrscht, desto positiver wird der Effekt von Bildung auf politisches Vertrauen.
 
 Da es sich bei Interaktionseffekten um bedingte Effekte handelt, dürfen wir auch den Haupteffekt von Bildung nur in Abhängigkeit der Korruptionsvariable interpretieren - der Haupteffekt von Bildung ist der Effekt den man beobachtet, wenn die Interaktionsvariable den Wert $0$ hat. Also: in einem ein Land, das keine Korruption hat, bzw. das sehr sauber ist, hat Bildung keinen signifikanten Effekt auf politisches Vertrauen.
 
-Man kann auch sagen: in Ländern mit hoher Korruption sorgt hohe Bildung dafür, dass man den politischen Eliten weniger Vertraut. In Ländern mit wenig Korruption wirkt Bildung dagegen positiv auf das Vertrauen. 
+Man kann auch sagen: in Ländern mit hoher Korruption sorgt hohe Bildung dafür, dass man den politischen Eliten weniger Vertraut. In Ländern mit geringer/keiner Korruption hat Bildung keinen Effekt auf politisches Vertrauen.
 
 
 # Schluss
 
 Wir haben unser Mehrebenenmodell um einen variierenden Slope ergänzt und haben gesehen, dass ein Teil der Unterschiede in der Varianz dieses random Effects mit einer Cross-Level Interaktion erklärt werden kann.
 
-Im nächsten Video 6 werden wir uns anschauen, wie man die Ergebnisse der unterschiedlichen Varianten der Mehrebenenregression am besten aufbereitet und tabellarisch und grafisch darstellt. 
+Im nächsten [Video 6](Mreg6.html) werden wir uns anschauen, wie man die Ergebnisse der unterschiedlichen Varianten der Mehrebenenregression am besten aufbereitet und tabellarisch und grafisch darstellt. 
 
 Noch ein Hinweis: Wichtig ist, dass man nicht einfach beliebige Ebene 1 Prädiktoren variieren lässt. Nur wo es eine Relevanz für die Forschungsfrage hat und nur dann, wenn auch die Theorie eine begründete Hypothese zulässt, nur dann werden variierende Slopes im Modell spezifiziert.
 
