--- a/Mreg5.Rmd
+++ b/Mreg5.Rmd
@@ -66,7 +66,7 @@ DIV.border {
 
 # Themenüberblick
 
-Hallo und herzlich Willkommen zum fünften Teil der Videoserie zum Thema Mehrebenenregression in R. 
+Hallo und herzlich willkommen zum fünften Teil der Videoserie zum Thema Mehrebenenregression in R. 
  
 Die Fragestellung für dieses Video lautet: Wie schätzt man variierende Slopes und Cross-Level Interaktionen? 
 
